export const snapshot = {};

snapshot[`Document Create Command - Help Text 1`] = `
stdout:
"
Usage: create

Description:

  Create a new Linear document

Options:

  -h, --help                    - Show this help.                                     
  -t, --title        <title>    - Document title                                      
  -c, --content      <content>  - Document content (markdown)                         
  -p, --project      <project>  - Project name or ID to associate with                
  --current-project             - Link to current issue's project (from VCS context)  
  -i, --icon         <icon>     - Icon emoji (e.g., 📄, 📋)                           
  --color            <color>    - Icon color (hex format: #RRGGBB)                    
  --no-interactive              - Disable interactive mode                            
  --plain                       - Disable colored output                              
  --human                       - Output in human-readable format (default: JSON)     
  --format           <format>   - Output format: text|json                            

"
stderr:
""
`;

snapshot[`Document Create Command - Happy Path 1`] = `
stdout:
'{
  "success": true,
  "operation": "create",
  "document": {
    "id": "doc-123",
    "title": "API Design Document",
    "slugId": "api-design-document",
    "url": "https://linear.app/test/document/api-design-document"
  }
}
'
stderr:
""
`;

snapshot[`Document Create Command - Minimal Flags 1`] = `
stdout:
'{
  "success": true,
  "operation": "create",
  "document": {
    "id": "doc-456",
    "title": "Quick Note",
    "slugId": "quick-note",
    "url": "https://linear.app/test/document/quick-note"
  }
}
'
stderr:
""
`;

snapshot[`Document Create Command - VCS Integration (Current Project) 1`] = `
stdout:
'{
  "success": true,
  "operation": "create",
  "document": {
    "id": "doc-789",
    "title": "Implementation Notes",
    "slugId": "implementation-notes",
    "url": "https://linear.app/test/document/implementation-notes"
  }
}
'
stderr:
""
`;

snapshot[`Document Create Command - Text Output 1`] = `
stdout:
'{
  "success": true,
  "operation": "create",
  "document": {
    "id": "doc-text",
    "title": "Design Document",
    "slugId": "design-document",
    "url": "https://linear.app/test/document/design-document"
  }
}
'
stderr:
""
`;
